@@ -142,6 +142,7 @@ AC_CHECK_FUNCS(m4_normalize([
     execv
     execve
     execvp
+    faccessat
     fchmodat
     fchownat
     fopen
